--- a/content/essays/catch-upwork-jobs-faster.mdx
+++ b/content/essays/catch-upwork-jobs-faster.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The $5 Chrome Extension That Helped Me Catch Upwork Jobs Faster"
+title: "💻🔔 The $5 Chrome Extension That Helped Me Catch Upwork Jobs Faster"
 slug: "catch-upwork-jobs-faster"
 date: 2025-08-16
 summary: "Scratching my own itch then scratching others' itches"
@@ -8,72 +8,72 @@ headerImage: "/images/upworkjobalerts.jpg"
 published: true
 ---
 
-## The problem
+## ⚡ The problem
 
-On Upwork, speed matters.
+On Upwork, speed matters.  
 
-The first few proposals usually get the client’s attention.
+The first few proposals usually get the client’s attention.  
 
-I was always late.
-
----
-
-## The frustration
-
-By the time I saw a job, ten other freelancers had already applied.
-
-I felt like I was always one step behind.
+I was always late. 🕐  
 
 ---
 
-## The hack
+## 😫 The frustration
 
-So I built my own solution.
+By the time I saw a job, ten other freelancers had already applied.  
 
-A Chrome extension that pings me with a notification every few minutes when new jobs appear.
-
-Simple. Effective. Cheating!
+I felt like I was always one step behind. 🐢  
 
 ---
 
-## The experiment
+## 🛠️ The hack
 
-Then I asked myself: *if it helps me, could it help others?*
+So I built my own solution.  
 
-So I listed it on Gumroad.
+A Chrome extension that pings me with a notification every few minutes when new jobs appear.  
 
-**$5. Lifetime deal.**
-
-[Get the extension on Gumroad →](https://sunwooy.gumroad.com/l/upworkalerts)
-
-No big plan. Just a test.
+Simple. Effective. Cheating! 😅  
 
 ---
 
-## The results (so far)
+## 🧪 The experiment
 
-It’s still early.
+Then I asked myself: *if it helps me, could it help others?*  
 
-Not viral. Not thousands of dollars.
+So I listed it on Gumroad.  
 
-But it works.
+**$5. Lifetime deal. 💵**  
 
-And that’s the point.
+👉 [Get the extension on Gumroad →](https://sunwooy.gumroad.com/l/upworkalerts)  
 
----
-
-## What I learned
-
-- **Scratching your own itch works.** If you need it, others probably do too.
-- **You don’t need a “startup.”** A weekend hack and a Gumroad link are enough.
-- **Small bets compound.** Each one makes you better, faster, bolder.
+No big plan. Just a test. 🎯  
 
 ---
 
-## The bigger picture
+## 📊 The results (so far)
 
-Indie hacking isn’t about unicorns.
+It’s still early.  
 
-It’s about momentum.
+Not viral. Not thousands of dollars.  
 
-It’s about stacking small wins, one tool at a time.
+But it works.  
+
+And that’s the point. ✅  
+
+---
+
+## 📝 What I learned
+
+- **Scratching your own itch works.** If you need it, others probably do too. ✨  
+- **You don’t need a “startup.”** A weekend hack and a Gumroad link are enough. 🛒  
+- **Small bets compound.** Each one makes you better, faster, bolder. 📈  
+
+---
+
+## 🌱 The bigger picture
+
+Indie hacking isn’t about unicorns. 🦄  
+
+It’s about momentum. 🌀  
+
+It’s about stacking small wins, one tool at a time. 🧩  
