--- a/content/projects/upwork-job-alerts.mdx
+++ b/content/projects/upwork-job-alerts.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ship It: First Indie Project"
+title: "🚀 Ship It: First Indie Project"
 slug: "upwork-job-alerts"
 date: 2025-08-16
 updated: 2025-08-16
@@ -9,23 +9,52 @@ headerImage: "/images/upworkjobalerts.jpg"
 published: true
 ---
 
-# Upwork Alerts Chrome Extension  
+# 🔔 Upwork Alerts Chrome Extension  
 
-## Overview  
+---
+
+## 📝 Overview  
 A simple Chrome extension that helps freelancers respond to Upwork jobs faster by sending desktop notifications every few minutes.  
 
-## Problem  
-On Upwork, being among the first to apply greatly increases your chances of landing a contract. I was constantly missing opportunities because I saw jobs too late.  
+Built in a weekend. Shipped fast. 🚢  
 
-## Solution  
-I built a Chrome extension that pings me with notifications whenever new jobs appear. This way, I can be one of the first to apply without manually refreshing the site all day.  
+---
 
-## Launch  
-I listed the tool on Gumroad as a **$5 lifetime deal**. No fancy launch or marketing — just a small experiment to see if other freelancers have the same pain.  
+## ⚡ The problem  
+On Upwork, being among the first to apply greatly increases your chances of landing a contract.  
+
+I was constantly missing opportunities because I saw jobs too late. 🕐  
+
+---
+
+## 🛠️ The solution  
+I built a Chrome extension that pings me with notifications whenever new jobs appear.  
+
+Now I can be one of the first to apply without refreshing the site all day. 🔄  
+
+Simple. Effective.  
+
+---
+
+## 🎯 The launch  
+I listed the tool on Gumroad as a **$5 lifetime deal**. 💵  
+
+No fancy launch. No ads. Just a small experiment to see if other freelancers feel the same pain.  
 
 👉 [Get the extension on Gumroad →](https://sunwooy.gumroad.com/l/upworkalerts)  
 
-## Learnings  
-- Scratching your own itch is often the best way to start.  
-- Shipping small projects quickly is more valuable than waiting for a “big idea.”  
-- Even micro-products can create momentum and open doors.  
+---
+
+## 📚 Learnings  
+- **Scratch your own itch.** If it works for you, it’ll likely work for others. ✨  
+- **Ship small and fast.** A weekend hack > waiting forever for a “big idea.” ⏳  
+- **Micro-products matter.** Each one builds momentum and opens doors. 🚪  
+
+---
+
+## 🌱 The bigger picture  
+This isn’t about building the next unicorn. 🦄  
+
+It’s about building, shipping, and stacking small wins.  
+
+One project at a time. 🧩  
