set header image

--- a/content/projects/osmo-to-instagram.mdx
+++ b/content/projects/osmo-to-instagram.mdx
@@ -5,7 +5,7 @@ date: 2025-08-17
 updated: 2025-08-17
 summary: "Upload your DJI Osmo Pocket 3 videos to Instagram in seconds"
 tags: ["project"]
-headerImage: "/images/osmotoinstagram.jpg"
+headerImage: "/images/osmo-to-insta.png"
 published: true
 ---
 
